css/style.css
/***************************/
/* HEADER */
/**************************/
.header {
  display: flex;
  padding-left: 18rem;
  padding-right: 18rem;
  position: absolute;
  gap: 2.2rem;
  align-items: center;
  width: 100%;
  height: 12rem;
}

.promo {
  background-image: url("/img/promo-background.png");
  box-shadow: inset 0 140px 40px rgba(0, 0, 0, 0.3);
  min-height: 75rem;
  padding-top: 12rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.logo {
  margin-right: auto;
  color: #fff;
}

.nav {
  align-self: stretch;
}

.header-nav-list {
  display: flex;
  list-style: none;
  gap: 0.8rem;
  height: 100%;
}

.header-nav-list li {
  display: flex;
  position: relative;
  align-items: center;
}

.header-nav-link:link,
.header-nav-link:visited {
  padding-left: 2rem;
  padding-right: 2rem;
  text-decoration: none;
  color: #fff;
  font-size: 2.1rem;
  font-family: "Gentium Plus", serif;
  font-weight: 700;
}

.header-nav-link:hover::after,
.header-nav-link:active::after,
.header-nav-link.is-active::after {
  opacity: 0.8;
}

.header-nav-link::after {
  opacity: 0;
  content: "";
  position: absolute;
  top: 0%;
  right: 0%;
  height: 3px;
  width: 100%;
  background: #fff;
  transition: opacity 0.3s ease-in;
}

.header-social {
  display: flex;
  gap: 2rem;
}

.header-social-link:link,
.header-social-link:visited {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  width: 3.2rem;
  height: 3.2rem;
  transition: all 0.5s;
}

.header-social-link:active,
.header-social-link:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.social-icon {
  color: #dab33e;
  width: 2rem;
  height: 2rem;
}

.content {
  font-family: "Yeseva One", cursive;
  font-size: 9rem;
  line-height: 1.4;
  text-align: center;
  color: #fff;
  padding-left: 32rem;
  padding-right: 32rem;
  text-shadow: 1px 1px 2px black;
}

.promo .decoration {
  margin-top: 3.2rem;
}

.promo-btn {
  display: flex;
  justify-content: center;
  gap: 3rem;
  margin-top: 4.8rem;
}

.btn:link,
.btn:visited {
  text-decoration: none;
  text-transform: uppercase;
  font-family: "Lato", sans-serif;
  color: #fff;
  font-size: 1.8rem;
  padding: 2.1rem 5.3rem;
  transition: all 0.5s;
}

.btn-black {
  background-color: rgba(0, 0, 0, 0.5);
}

.btn-black:active,
.btn-black:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

.btn-white {
  background-color: rgb(255, 255, 255, 0.3);
}

.btn-white:active,
.btn-white:hover {
  background-color: rgb(255, 255, 255, 0.5);
}

.about {
  background-image: linear-gradient(
      -43deg,
      rgb(1, 1, 1, 0%),
      rgb(255, 255, 255, 100%)
    ),
    url(/img/pattern-ellipse.png);
  box-shadow: inset 0 0 25px rgba(1, 1, 1, 0.14);
  display: flex;
  justify-content: center;
  padding-top: 7.5rem;
  padding-bottom: 7.5rem;
}

.about-body {
  display: flex;
  gap: 6rem;
  max-width: 105rem;
}

.about-header {
  color: #cc9900;
}

.about-content {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-top: 3rem;
}

.about-text {
  color: #4c4c4c;
  margin-top: 3.3rem;
  text-align: center;
}
.cook {
  margin-top: 5.2rem;
}

.dish {
  height: 55rem;
  width: 55rem;
  border-radius: 50%;
  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.5);
}
.ingredients {
  background-image: url(/img/ingredients-background.png);
  padding: 9.9rem 21.4rem 9.9rem 21.4rem;
}

.ingredients-body {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-left: auto;
  padding-top: 8.2rem;
  padding-bottom: 8.2rem;
  width: 57rem;
  background-color: rgba(0, 0, 0, 0.5);
}

.ingredients-header {
  color: #fff;
}

.white-divider {
  margin-top: 1.6rem;
}

.ingredients-text {
  text-align: center;
  padding-left: 7.7rem;
  padding-right: 7.7rem;
  color: #fff;
  margin-top: 3rem;
}

.ingredients-images {
  display: flex;
  gap: 3rem;
  margin-top: 6rem;
}

.ingredients-images img {
  width: 10rem;
  height: 10rem;
  object-fit: none;
  object-position: 28% 40%;
  border-radius: 50%;
  border: 5px solid rgb(85, 85, 85, 0.5);
}

.menu {
  box-shadow: inset 0 0 25px rgba(1, 1, 1, 0.14);
  background-image: linear-gradient(
      134deg,
      rgb(32, 90, 91, 0%),
      rgb(255, 255, 255, 100%)
    ),
    url(/img/pattern-menue-section.png);
  display: flex;
  justify-content: center;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.meal-group-list {
  columns: 2;
  column-gap: 14.5rem;
  margin-top: 6.8rem;
}

.meal-group {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 6.8rem;
  break-inside: avoid;
}

.menu-header {
  color: #cc9900;
}

.meal-list {
  display: flex;
  flex-direction: column;
  margin-top: 2.8rem;
  gap: 3.8rem;
}

.meal-list dl {
  position: relative;
}

.meal-line {
  display: flex;
  justify-content: space-between;
  border-bottom: 0.06px solid rgb(200, 159, 45, 0.2);
  padding-bottom: 1.5rem;
  color: #c89f2d;
  font-family: "Yeseva One", cursive;
  font-size: 2rem;
  font-weight: 500;
  width: 43rem;
}

.meal-text {
  color: #4c4c4c;
  margin-top: 1.2rem;
}

.meal.special::before {
  opacity: 0.3;
}

.meal.special::after {
  opacity: 0.6;
}

.meal::before {
  border: 1px solid #c89f2d;
  content: "";
  position: absolute;
  left: -10px;
  right: -10px;
  top: -10px;
  bottom: -10px;
  opacity: 0;
}

.meal::after {
  content: "Special";
  position: absolute;
  top: -9px;
  right: -10px;
  background-color: #c89f2d;
  padding: 4px 12px;
  color: #f8fafa;
  font-family: "Lato", Regular;
  font-size: 1.4rem;
  opacity: 0;
  transform: translateY(-100%);
}

.reviews {
  background-image: url(/img/review-background.png);
  display: flex;
  justify-content: center;
  padding-top: 10rem;
  padding-bottom: 10rem;
}

.reviews-body {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 77rem;
  background-color: rgba(0, 0, 0, 0.8);
  padding-top: 8rem;
  padding-bottom: 8rem;
}

.reviews-header {
  color: #fff;
}

.reviews-text {
  text-align: center;
  font-size: 2.5rem;
  line-height: 4.5rem;
  color: #dde0df;
  font-weight: 700;
  font-family: "Gentium Book Basic";
  padding-left: 8.5rem;
  padding-right: 8.5rem;
  margin-top: 2.6rem;
  position: relative;
}

.reviews-text::after {
  position: absolute;
  top: 0;
  left: 2.5rem;
  content: "“";
  font-size: 9.6rem;
  color: #f2f4f4;
  font-family: "Georgia";
  opacity: 0.47;
}

.caption {
  font-family: "Lato", Regular;
  font-size: 1.8rem;
  margin-top: 4.5rem;
  color: #fff;
}

.reservation {
  background-image: linear-gradient(
      -13deg,
      rgb(12, 52, 53, 0%),
      rgb(255, 255, 255, 100%)
    ),
    url(/img/pattern-ellipse.png);
  box-shadow: inset 0 0 25px rgba(1, 1, 1, 0.05);
  display: flex;
  gap: 5rem;
  padding: 10rem 21.4rem 10rem 21.4rem;
}

.reservation-images {
  display: flex;
  gap: 3rem;
}

.reservation-images img {
  object-fit: cover;
}

.reservation-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 6rem;
  padding-right: 6rem;
}

.reservation-heading {
  color: #cc9900;
}

.reservation-text {
  text-align: center;
  margin-top: 2.1rem;
  color: #4c4c4c;
}

.reservation-fields {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 3rem;
  row-gap: 3rem;
  margin-top: 4.5rem;
}

.input-name {
  display: inline-block;
  margin-bottom: 1rem;
}

.input-field {
  font-family: "Open Sans", Bold;
  font-size: 1.4rem;
  font-weight: 700;
  color: #c9a131;
}

.input-field *:focus {
  outline: none;
  border: 1px solid #c89f2d;
}

.input-element,
.select-element {
  width: 100%;
  padding: 1.2rem;
  font-family: "Open Sans", Regular;
  font-size: 1.6rem;
  border: 1px solid #c8c6c6;
  background-color: rgba(255, 255, 255, 0.4);
  opacity: 0.8;
}

.input-element::placeholder,
.input-element:last-child,
.select-element {
  color: #7c7c7c;
  font-style: italic;
}

.option-element {
  font-family: "Open Sans", Bold;
  color: #4c4c4c;
}

.btn-reservation {
  cursor: pointer;
  margin-top: 3.2rem;
  padding: 1.2rem 6.2rem;
  font-size: 1.6rem;
  font-family: "Open Sans", Regular;
  color: #ffffff;
  font-weight: 400;
  background-color: rgba(200, 159, 45, 0.98);
  border: 1px solid #c89f2d;
  opacity: 0.98;
}

.btn-reservation:hover {
  opacity: 0.5;
  transition: all 0.5s;
}

